# Events-Infra

./: .env.example  .gitignore  README.md  pyproject.toml
db/migrations/: 001_meta.sql  002_news.sql  003_macro.sql  004_social.sql  005_signals.sql  006_event_triggers.sql  007_social_handles.sql
dbkit/: __init__.py  constants.py  filelock.py  http.py  pg.py  shutdown.py
events-infra/: BACKLOG.md  FINDINGS.md  FOLDER.md  HANDOFF-backtest.md  HANDOFF-rebalance.md  HANDOFF.md  docker-compose.yml  init-db.sh
events-infra/backtest/: FOLDER.md  config.py  engine.key.md  engine.py  events_classified_cache.json  gate_params.key.md  gate_params.py  order_manager.key.md  order_manager.py  portfolio_allocator.key.md  portfolio_allocator.py  preclassify.key.md  preclassify.py  runner.key.md  runner.py  tick.key.md  tick.py  timeline.key.md  timeline.py
events-infra/datalake/: FOLDER.md
events-infra/market-data/: FOLDER.md  fetch_ibkr.py  fetch_ibkr_datalake.py  fetch_webapi.py  fetch_yf.py
events-infra/parser-classifier/: FOLDER.md  align_events_price.py  classify.key.md  classify.py  extract.py  prompt.key.md  prompt.py  run_classify.py
events-infra/scripts/: _missing_ids.txt  apply_migrations.key.md  apply_migrations.py  backfill_structural_tags.key.md  backfill_structural_tags.py  catalog_tpio_datalake.py  ingest_x_archive.py  ingest_x_twitterapi_io.py
scripts/: apply_migrations.py  hello_db.py
scripts/ingest/: _common.py  _normalize.py  (+6 more)
trader/: __init__.py  clock.py  dispatcher.py  fast_signal.py  prices.py  reflect.py  social_inference.py  tickers.py
(+95 files in other folders)
